syntax = "proto3";

//Image Denoising AI Service
service AI_ModelService {
    rpc process(ClientRequest) returns (ServerReply) {}

}

// request: clint -> server
message ClientRequest {
    bytes img_bytes = 1;
    int32 width = 2;
    int32 height = 3;
    int 32 channel = 4;
}

// reply: server -> client
message ServerReply {
    bytes img_bytes = 1;
    int32 width = 2;
    int32 height = 3;
    int32 channel =4;
}
